# fitnessllm-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.yml  pyproject.toml
notebooks/: langchain_demo.ipynb  langchain_demo.py
