[project]
name = "fitnessllm-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Santosh Gummidipundi"}
]
readme = "README.md"
requires-python = "3.12.2"
dependencies = [
    "langchain-deepseek-official (>=0.1.0.post1,<0.2.0)",
    "torch (>=2.6.0,<3.0.0)",
    "notebook (>=7.3.2,<8.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
